2006-02-20  Federico Mena Quintero  <federico@novell.com>

	* src/nautilus-share.c (property_page_commit): Check that the
	folder we are trying to share has enough "other" permissions.
	Fixes https://bugzilla.novell.com/show_bug.cgi?id=149615
	(check_sharing_permissions): New function.

	* src/shares.c (net_usershare_run): Return an error when our
	spawned command exits with a signal; we were returning success in
	this case with an empty GKeyFile, which the caller doesn't like.

2006-02-06  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (net_usershare_run): Oops, fix a printf format.
	Fixes https://bugzilla.novell.com/show_bug.cgi?id=147065

2006-01-26  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (net_usershare_run): Oops, don't propagate an error
	when there wasn't one.

	* interfaces/share-dialog.glade.in: Turn on word wrapping in the
	label_status widget; make it left-justified, and selectable.

	* src/nautilus-share.c (property_page_commit): Return a boolean
	success code.
	(button_apply_clicked_cb): Don't close the standalone window if we
	fail to commit the page.  This lets the user see the error message.

2006-01-19  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c: Add a bunch of debug logging code, enabled with
	#ifdef VERBOSE.

	* src/nautilus-share.c (share_this_folder_callback): Set the
	page->standalone_window.
	(PropertyPage): Add a standalone_window field.
	(button_apply_clicked_cb): Destroy the standalone_window if we
	have it.
	(property_page_commit): Oops, pass a NULL ShareInfo to
	shares_modify_share() if we want to remove a share.

2006-01-19  Federico Mena Quintero  <federico@ximian.com>

	Finish the code for "net usershare add -l".  This makes "net
	usershare" print back the info for the modified share; we use this
	possibly-modified info to synchronize our view of the available
	shares, since it is the canonical info, instead of assuming that