@@ -1,3 +1,13 @@
+2006-02-21  Federico Mena Quintero  <federico@novell.com>
+
+	* src/nautilus-share.c (confirm_sharing_permissions): Renamed from
+	check_sharing_permissions().  Now we let the user cancel the operation.
+	(message_confirm_missing_permissions): Renamed from
+	message_missing_permissions().  Now we present a confirmation
+	dialog instead of an information one.
+	(property_page_commit): Don't do anything if the user decides he
+	doesn't want us to change his folder's permissions.
+
 2006-02-20  Federico Mena Quintero  <federico@novell.com>
 
 	* src/nautilus-share.c (property_page_commit): Check that the
